---------------------------------------------------------------------------------------------------
Version: 0.1.9
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.1.8
Date: 2023-10-03
  Bugfixes:
    - Fixed crash when opening infinity chest
    - Fixed crash when inserter receives a signal with no name
---------------------------------------------------------------------------------------------------
Version: 0.1.7
Date: 2023-06-16
  Changes:
    - Fix UI overflow with many suggestions
    - Add circuit networks as suggestion source
---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: 2023-06-15
  Changes:
    - Fix crash when mining open entity
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 2023-06-15
  Changes:
    - Fix crash with attempting to draw fluids as items
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 2023-06-14
  Changes:
    - Add splitter support
    - Add belt item suggestions
    - Always replace filtered item when only one filter exists
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 2023-06-14
  Changes:
    - Fix crash on new game
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2023-06-14
  Changes:
    - Create thumbnail
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2023-06-14
  Changes:
    - Update mod portal
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2023-06-14
  Features:
    - Intial release
    - Reads chest contents
    - Reads recipe input/output