@@ -1,5 +1,5 @@
 # Filter Helper
-Filter Helper is a mod for [Factorio](https://factorio.com) which adds a context aware panel to filter inserters to quickly set filter contents. Simply click on a suggested item to add it as a filter. Click again to remove the filter.
+Filter Helper is a mod for [Factorio](https://factorio.com) which adds a context aware panel to filter inserters, splitters, and loaders to quickly set filter contents. Simply click on a suggested item to add it as a filter. Click again to remove the filter.
 
 ## Installation
 Download and install from the [official Factorio mod portal](https://mods.factorio.com/mod/FilterHelper).
