@@ -2,6 +2,7 @@
 Version: 0.1.9
 Date: ????
   Changes:
+    - Add loader1x2 and loader1x1 support
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.8
 Date: 2023-10-03
